--- a/main.ipynb
+++ b/main.ipynb
@@ -964,7 +964,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "YqckEJEVZPhB"
       },
@@ -976,18 +976,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "fAJJAdl2ZYf4",
-        "outputId": "78dbb8e1-b0e7-41cf-d83b-b9c792d64ddd"
+        "outputId": "f8768180-47a8-4bd8-f359-d4857f7c489a"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Updated property [core/project].\n"
           ]
@@ -999,7 +999,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "Fz_ljAoNZys7"
       },
@@ -2590,6 +2590,223 @@
         "id": "CiZrYrzpg20q"
       },
       "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import fitz  # PyMuPDF\n",
+        "import io\n",
+        "\n",
+        "import cv2\n",
+        "import PyPDF2\n",
+        "from google.cloud import vision\n",
+        "from moviepy.editor import VideoFileClip\n",
+        "from pdf2image import convert_from_path\n",
+        "from PIL import Image\n",
+        "from skimage.metrics import structural_similarity as ssim\n",
+        "import os\n",
+        "\n",
+        "# Initialize the Google Vision API client\n",
+        "client = vision.ImageAnnotatorClient()\n",
+        "\n",
+        "paths = []\n",
+        "for file in os.listdir('/content/drive/MyDrive/pdf_f'):\n",
+        "  paths.append(os.path.join('/content/drive/MyDrive/pdf_f', file))\n",
+        "\n",
+        "\n",
+        "def extract_images_from_pdf(file_path):\n",
+        "    doc = fitz.open(file_path)\n",
+        "    images = []\n",
+        "    for i in range(len(doc)):\n",
+        "        for img_index, img in enumerate(doc.get_page_images(i)):\n",
+        "            xref = img[0]\n",
+        "            base_image = doc.extract_image(xref)\n",
+        "            image_bytes = base_image[\"image\"]\n",
+        "\n",
+        "            # Constructing a filename for each image\n",
+        "            image_filename = f\"image_page_{i}_img_{img_index}.png\"\n",
+        "\n",
+        "            with open(image_filename, \"wb\") as image_file:\n",
+        "                image_file.write(image_bytes)\n",
+        "\n",
+        "            images.append(image_filename)\n",
+        "    return images\n",
+        "\n",
+        "# Function to convert PDF pages to images\n",
+        "def convert_pdf_to_images(pdf_path):\n",
+        "    return convert_from_path(pdf_path)\n",
+        "\n",
+        "\n",
+        "\n",
+        "# Function to interpret an image\n",
+        "def interpret_image(image_content):\n",
+        "    content = io.BytesIO()\n",
+        "    image_content.save(content, format='JPEG')\n",
+        "    content = content.getvalue()\n",
+        "\n",
+        "    image = vision.Image(content=content)\n",
+        "    response = client.text_detection(image=image)\n",
+        "\n",
+        "    return response.text_annotations[0].description if response.text_annotations else \"\"\n",
+        "\n",
+        "\n",
+        "\n",
+        "for pdf_path in range(len(paths)):\n",
+        "  file_name = paths[pdf_path].split('/')[-1].split('.')[0]\n",
+        "  output_file_path = f'{file_name}.txt'\n",
+        "  images = convert_pdf_to_images(paths[pdf_path])\n",
+        "  with open(output_file_path, 'a') as f:\n",
+        "    for image in images:\n",
+        "      description = interpret_image(image)\n",
+        "      f.write(description)\n",
+        "\n",
+        "\n",
+        "# import base64\n",
+        "# import requests\n",
+        "\n",
+        "# # OpenAI API Key\n",
+        "# api_key = \"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\"\n",
+        "\n",
+        "# # Function to encode the image\n",
+        "# def encode_image(image_path):\n",
+        "#   with open(image_path, \"rb\") as image_file:\n",
+        "#     return base64.b64encode(image_file.read()).decode('utf-8')\n",
+        "\n",
+        "# # Path to your image\n",
+        "# image_path = \"/content/image_page_0_img_0 (4).png\"\n",
+        "\n",
+        "# # Getting the base64 string\n",
+        "# base64_image = encode_image(image_path)\n",
+        "\n",
+        "# headers = {\n",
+        "#   \"Content-Type\": \"application/json\",\n",
+        "#   \"Authorization\": f\"Bearer {api_key}\"\n",
+        "# }\n",
+        "\n",
+        "# payload = {\n",
+        "#   \"model\": \"gpt-4-vision-preview\",\n",
+        "#   \"messages\": [\n",
+        "#     {\n",
+        "#       \"role\": \"user\",\n",
+        "#       \"content\": [\n",
+        "#         {\n",
+        "#           \"type\": \"text\",\n",
+        "#           \"text\": \"What’s in this image?\"\n",
+        "#         },\n",
+        "#         {\n",
+        "#           \"type\": \"image_url\",\n",
+        "#           \"image_url\": {\n",
+        "#             \"url\": f\"data:image/jpeg;base64,{base64_image}\"\n",
+        "#           }\n",
+        "#         }\n",
+        "#       ]\n",
+        "#     }\n",
+        "#   ],\n",
+        "#   \"max_tokens\": 300\n",
+        "# }\n",
+        "\n",
+        "# response = requests.post(\"https://api.openai.com/v1/chat/completions\", headers=headers, json=payload)\n",
+        "\n",
+        "# print(response.json())"
+      ],
+      "metadata": {
+        "id": "AwsEuV7Bud-B",
+        "outputId": "5da83978-9525-4b8e-c83d-53cd9575841d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 436
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "PDFInfoNotInstalledError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pdf2image/pdf2image.py\u001b[0m in \u001b[0;36mpdfinfo_from_path\u001b[0;34m(pdf_path, userpw, ownerpw, poppler_path, rawdates, timeout)\u001b[0m\n\u001b[1;32m    567\u001b[0m             \u001b[0menv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"LD_LIBRARY_PATH\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpoppler_path\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\":\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0menv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"LD_LIBRARY_PATH\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 568\u001b[0;31m         \u001b[0mproc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcommand\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0menv\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0menv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstdout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mPIPE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstderr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mPIPE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    569\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/lib/python3.10/subprocess.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, args, bufsize, executable, stdin, stdout, stderr, preexec_fn, close_fds, shell, cwd, env, universal_newlines, startupinfo, creationflags, restore_signals, start_new_session, pass_fds, user, group, extra_groups, encoding, errors, text, umask, pipesize)\u001b[0m\n\u001b[1;32m    970\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 971\u001b[0;31m             self._execute_child(args, executable, preexec_fn, close_fds,\n\u001b[0m\u001b[1;32m    972\u001b[0m                                 \u001b[0mpass_fds\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcwd\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0menv\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/lib/python3.10/subprocess.py\u001b[0m in \u001b[0;36m_execute_child\u001b[0;34m(self, args, executable, preexec_fn, close_fds, pass_fds, cwd, env, startupinfo, creationflags, shell, p2cread, p2cwrite, c2pread, c2pwrite, errread, errwrite, restore_signals, gid, gids, uid, umask, start_new_session)\u001b[0m\n\u001b[1;32m   1862\u001b[0m                         \u001b[0merr_msg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrerror\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merrno_num\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1863\u001b[0;31m                     \u001b[0;32mraise\u001b[0m \u001b[0mchild_exception_type\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merrno_num\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merr_msg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merr_filename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1864\u001b[0m                 \u001b[0;32mraise\u001b[0m \u001b[0mchild_exception_type\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merr_msg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'pdfinfo'",
+            "\nDuring handling of the above exception, another exception occurred:\n",
+            "\u001b[0;31mPDFInfoNotInstalledError\u001b[0m                  Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-25-1c47c0986248>\u001b[0m in \u001b[0;36m<cell line: 58>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     59\u001b[0m   \u001b[0mfile_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpaths\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpdf_path\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     60\u001b[0m   \u001b[0moutput_file_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34mf'{file_name}.txt'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 61\u001b[0;31m   \u001b[0mimages\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconvert_pdf_to_images\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpaths\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpdf_path\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     62\u001b[0m   \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput_file_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'a'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     63\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mimage\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mimages\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-25-1c47c0986248>\u001b[0m in \u001b[0;36mconvert_pdf_to_images\u001b[0;34m(pdf_path)\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[0;31m# Function to convert PDF pages to images\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mconvert_pdf_to_images\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpdf_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 41\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mconvert_from_path\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpdf_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     42\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pdf2image/pdf2image.py\u001b[0m in \u001b[0;36mconvert_from_path\u001b[0;34m(pdf_path, dpi, output_folder, first_page, last_page, fmt, jpegopt, thread_count, userpw, ownerpw, use_cropbox, strict, transparent, single_file, output_file, poppler_path, grayscale, size, paths_only, use_pdftocairo, timeout, hide_annotations)\u001b[0m\n\u001b[1;32m    125\u001b[0m         \u001b[0mpoppler_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpoppler_path\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mas_posix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    126\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 127\u001b[0;31m     page_count = pdfinfo_from_path(\n\u001b[0m\u001b[1;32m    128\u001b[0m         \u001b[0mpdf_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muserpw\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mownerpw\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpoppler_path\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpoppler_path\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    129\u001b[0m     )[\"Pages\"]\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pdf2image/pdf2image.py\u001b[0m in \u001b[0;36mpdfinfo_from_path\u001b[0;34m(pdf_path, userpw, ownerpw, poppler_path, rawdates, timeout)\u001b[0m\n\u001b[1;32m    592\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    593\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mOSError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 594\u001b[0;31m         raise PDFInfoNotInstalledError(\n\u001b[0m\u001b[1;32m    595\u001b[0m             \u001b[0;34m\"Unable to get page count. Is poppler installed and in PATH?\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    596\u001b[0m         )\n",
+            "\u001b[0;31mPDFInfoNotInstalledError\u001b[0m: Unable to get page count. Is poppler installed and in PATH?"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!apt-get install poppler-utils\n"
+      ],
+      "metadata": {
+        "id": "c-8v4G_B9gpz",
+        "outputId": "86b03adf-23ff-4aa6-faad-8bcc9bcda5d5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Reading package lists... Done\n",
+            "Building dependency tree... Done\n",
+            "Reading state information... Done\n",
+            "The following NEW packages will be installed:\n",
+            "  poppler-utils\n",
+            "0 upgraded, 1 newly installed, 0 to remove and 10 not upgraded.\n",
+            "Need to get 186 kB of archives.\n",
+            "After this operation, 696 kB of additional disk space will be used.\n",
+            "Ign:1 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 poppler-utils amd64 22.02.0-2ubuntu0.2\n",
+            "Err:1 http://security.ubuntu.com/ubuntu jammy-updates/main amd64 poppler-utils amd64 22.02.0-2ubuntu0.2\n",
+            "  404  Not Found [IP: 185.125.190.39 80]\n",
+            "E: Failed to fetch http://security.ubuntu.com/ubuntu/pool/main/p/poppler/poppler-utils_22.02.0-2ubuntu0.2_amd64.deb  404  Not Found [IP: 185.125.190.39 80]\n",
+            "E: Unable to fetch some archives, maybe run apt-get update or try with --fix-missing?\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pdftoppm -v\n"
+      ],
+      "metadata": {
+        "id": "fW2od3GnAwk-",
+        "outputId": "71e25b0d-0e4d-4b5a-9d41-055b33f16fb0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/bin/bash: line 1: pdftoppm: command not found\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "riH2LDXzA1vD"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ],
