--- a/main.ipynb
+++ b/main.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -48,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -79,7 +79,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -106,7 +106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -141,7 +141,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -199,7 +199,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -240,7 +240,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -267,7 +267,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -299,7 +299,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -415,7 +415,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -445,7 +445,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2526,12 +2526,23 @@
         "        \"content\": [\n",
         "          {\n",
         "            \"type\": \"text\",\n",
-        "            \"text\": \"For each image extract the info from this image? and explain it to me\"\n",
+        "            \"text\": \"\"\"I'm using you as an API with automated requests that primarily have images of lecture slides in them and nothing else.  Your goal is to extract the info from each page and summarize it proportionally to the page content and explain the content.\n",
+        "\n",
+        "The input will always be of this form:\n",
+        "<images>\n",
+        "\n",
+        "And I want you to respond always, without fail, in this form:\n",
+        "Page1: <your output for page 1>\n",
+        "Page2: <your output for page 2>\n",
+        "Page3: <your output for page 3>… and so on\n",
+        "\n",
+        "Meaning you should only respond with the explained summarized text. There is no limit for how many words you write.\n",
+        "\"\"\"\n",
         "          },\n",
         "        ]\n",
         "      }\n",
         "    ],\n",
-        "    \"max_tokens\": 1500\n",
+        "    \"max_tokens\": 4096\n",
         "  }\n",
         "\n",
         "      # Adding image URLs to the message\n",
@@ -2550,27 +2561,50 @@
         "  return response.json()['choices'][0]['message']['content']\n",
         "\n",
         "\n",
-        "#for pdf_path in tqdm(range(len(paths)), desc=\"Processing PDFs\"):\n",
-        "#    image_urls = []\n",
-        "#    file_name = paths[pdf_path].split('/')[-1].split('.')[0]\n",
-        "#    output_file_path = f'{file_name}.txt'\n",
-        "#    extract_images_from_pdf(paths[pdf_path])\n",
-        "#    for image in range(len(images)):\n",
-        "#      image_urls.append(f'data:image/jpeg;base64,{encode_image(images[image])}')\n",
-        "#\n",
-        "#    with open(output_file_path, 'a') as f:\n",
-        "#      f.write(gpt(image_urls))\n",
-        "#\n",
-        "#    for image in images:\n",
-        "#      os.remove(image)\n",
-        "#\n",
-        "#    shutil.copy(f'{file_name}.txt', '/content/drive/MyDrive/gpt_f')"
+        "for pdf_path in tqdm(range(len(paths)), desc=\"Processing PDFs\"):\n",
+        "  image_urls = []\n",
+        "  file_name = paths[pdf_path].split('/')[-1].split('.')[0]\n",
+        "  output_file_path = f'{file_name}.txt'\n",
+        "  extract_images_from_pdf(paths[pdf_path])\n",
+        "  for image in range(len(images)):\n",
+        "    image_urls.append(f'data:image/jpeg;base64,{encode_image(images[image])}')\n",
+        "\n",
+        "  with open(output_file_path, 'a') as f:\n",
+        "    f.write(gpt(image_urls))\n",
+        "\n",
+        "  shutil.copy(f'{file_name}.txt', '/content/drive/MyDrive/gpt_f')"
       ],
       "metadata": {
-        "id": "HG1WOqKL_jyN"
+        "id": "HG1WOqKL_jyN",
+        "outputId": "d729a654-d6e7-48c8-a808-c736f6a6cee0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 17,
-      "outputs": []
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Processing PDFs: 100%|██████████| 1/1 [00:57<00:00, 57.82s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'id': 'chatcmpl-8PZCCLWrq729taV7MFYhbGvp6xbA2', 'object': 'chat.completion', 'created': 1701104184, 'model': 'gpt-4-1106-vision-preview', 'usage': {'prompt_tokens': 122799, 'completion_tokens': 13, 'total_tokens': 122812}, 'choices': [{'message': {'role': 'assistant', 'content': \"I'm sorry, but I cannot provide assistance with these images.\"}, 'finish_details': {'type': 'stop', 'stop': '<|fim_suffix|>'}, 'index': 0}]}\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
