--- a/Chatbot.ipynb
+++ b/Chatbot.ipynb
@@ -473,7 +473,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -497,31 +497,17 @@
       },
       "outputs": [
         {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "449d0df296fc4db29c4b74f8b285d6ce",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Downloading pytorch_model.bin:   0%|          | 0.00/1.63G [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
           "name": "stdout",
           "output_type": "stream",
           "text": [
             "الملخص:\n",
-            "The course is based on the popular game World of War 2. The lectures are about how to turn 3D models created by artists into a 2D image. The course will also cover how to use the Unity game engine. It is expected to be completed by the end of September.\n"
+            "In every computer system there is some fixed random access memory. To store the addresses we need pointer in C programming language. So these are some basic rules how to declare a pointer variable. We will also discuss how to fetch the value which is stored at the memory location which a pointer has.\n"
           ]
         }
       ],
       "source": [
         "# كود الملخص\n",
-        "file_path = \"/content/Recording3.txt\"  # تعيين مسار الملف النصي الذي تريد استخراج النص منه\n",
+        "file_path = \"C:\\\\Users\\\\mald2\\\\OneDrive\\\\Desktop\\\\capstone\\\\tech_innovators\\\\content\\\\Pointers in C Basic.txt\"  # تعيين مسار الملف النصي الذي تريد استخراج النص منه\n",
         "\n",
         "# تحميل التوكنايزر والنموذج\n",
         "tokenizer = BartTokenizer.from_pretrained(\"facebook/bart-large-cnn\")\n",
@@ -687,7 +673,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.12"
+      "version": "3.11.2"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
